add MAVEN_OPTS and groovy