@@ -5,12 +5,13 @@ FROM sjatgutzmann/docker.centos.oraclejava8
 MAINTAINER Sven Jörns <sj.at.gutzmann@gmail.com>
 
 RUN yum -y update; yum clean all \
- && yum -y install vim git
+ && yum -y install vim git unzip
 
 ENV JAVA_TOOLS_HOME=/opt/javatools
 RUN mkdir ${JAVA_TOOLS_HOME} && cd ${JAVA_TOOLS_HOME}
 
 ENV M2_HOME=/opt/javatools/maven MAVEN_VERSION=3.3.9
+ARG MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=256m"
 WORKDIR ${JAVA_TOOLS_HOME}
 # install maven
 # https://maven.apache.org/download.cgi
@@ -18,7 +19,9 @@ RUN wget -q http://artfiles.org/apache.org/maven/maven-3/${MAVEN_VERSION}/binari
 	&& tar -xzf apache-maven-${MAVEN_VERSION}-bin.tar.gz \
 	&& ln -s apache-maven-${MAVEN_VERSION} maven \
 	&& echo "M2_HOME=${M2_HOME}" > /etc/profile.d/maven.sh \
-	&& echo "PATH=\$PATH:\${M2_HOME}/bin" >> /etc/profile.d/maven.sh
+	&& echo "MAVEN_OPTS=${MAVEN_OPTS}" >> /etc/profile.d/maven.sh \
+	&& echo "PATH=\$PATH:\${M2_HOME}/bin" >> /etc/profile.d/maven.sh \
+	&& rm apache-maven-${MAVEN_VERSION}-bin.tar.gz
 
 # install ANT
 ENV ANT_HOME /opt/javatools/ant
@@ -27,7 +30,18 @@ RUN wget -q http://ftp.halifax.rwth-aachen.de/apache/ant/binaries/apache-ant-${A
 	&& tar xzf apache-ant-${ANT_VERSION}-bin.tar.gz \
 	&& ln -s apache-ant-${ANT_VERSION} ant \
 	&& echo "ANT_HOME=${ANT_HOME}" > /etc/profile.d/ant.sh \
-	&& echo "PATH=\$PATH:\${ANT_HOME}/bin" >> /etc/profile.d/ant.sh
+	&& echo "PATH=\$PATH:\${ANT_HOME}/bin" >> /etc/profile.d/ant.sh \
+	&& rm apache-ant-${ANT_VERSION}-bin.tar.gz
+
+#install groovy
+ENV GROOVY_HOME /opt/javatools/groovy
+ENV GROOVY_VERSION 2.4.7
+RUN wget -q https://dl.bintray.com/groovy/maven/apache-groovy-binary-${GROOVY_VERSION}.zip \
+	&& unzip apache-groovy-binary-${GROOVY_VERSION}.zip \
+	&& ln -s groovy-${GROOVY_VERSION} groovy \
+        && echo "GROOVY_HOME=${GROOVY_HOME}" > /etc/profile.d/groovy.sh \
+        && echo "PATH=\$PATH:\${GROOVY_HOME}/bin" >> /etc/profile.d/groovy.sh \
+	&& rm apache-groovy-binary-${GROOVY_VERSION}.zip
 
 
 ENTRYPOINT /bin/bash
